--- a/harsh.html
+++ b/harsh.html
@@ -63,9 +63,12 @@
         </tr>        
         <tr> <td>
             <br><br>
-            <a href="register.html"><input class="btn btn-success" type="button" value ="submit"></a>
+            <input class="btn btn-success" type="button" value ="submit" onclick = "createbill()">
             <input class="btn btn-success" type="reset" >
             <input class="btn btn-danger" type="button" value="Cancle">
+            function createbill(){
+               alert ("Your order has been created ,we will notify you soon");
+            }
         </td> 
         </tr>
     </table>
