--- a/harsh.html
+++ b/harsh.html
@@ -66,9 +66,10 @@
             <input class="btn btn-success" type="button" value ="submit" onclick = "createbill()">
             <input class="btn btn-success" type="reset" >
             <input class="btn btn-danger" type="button" value="Cancle">
+           <script>
             function createbill(){
                alert ("Your order has been created ,we will notify you soon");
-            }
+            } </script>
         </td> 
         </tr>
     </table>
