--- a/harsh.html
+++ b/harsh.html
@@ -68,7 +68,7 @@
             <input class="btn btn-danger" type="button" value="Cancle">
            <script>
             function createbill(){
-               alert ("Your order has been created ,we will notify you soon");
+               alert ("Your registration has been successful created ,we will notify you after the confirmation of your ticket");
             } </script>
         </td> 
         </tr>
